rename module phase 2

--- a/publiccommons.dev.ini
+++ b/publiccommons.dev.ini
@@ -2,12 +2,12 @@
 base_url = http://<SERVER_NAME>/weatherinfo/nckvsrpc/api/rest
 login_name = <USERNAME>
 login_pass = <PASSWORD>
-app_servername = pcreceiver
+app_servername = publiccommons
 app_username = system
 timezone =
 
 [uwsgi]
-module = pcreceiver.wsgi
+module = publiccommons.wsgi
 http = :7789
 master = true
 processes = 2
@@ -34,7 +34,7 @@ handlers = console
 [logger_app]
 level = DEBUG
 handlers = console
-qualname = pcreceiver
+qualname = publiccommons
 propagate = 0
 
 [handler_console]
