use nckvs-client library instead of the own module

--- a/publiccommons.dev.ini
+++ b/publiccommons.dev.ini
@@ -5,6 +5,8 @@ login_pass = <PASSWORD>
 app_servername = publiccommons
 app_username = system
 timezone =
+datatypename = commonstest1
+datatypeversion = 1
 
 [uwsgi]
 module = publiccommons.wsgi
